[gd_scene load_steps=15 format=4 uid="uid://dnmluqu756hk2"]

[ext_resource type="Script" uid="uid://he74afhttecp" path="res://addons/go_p2p/template/3D/scripts/SCR_bomb_3d.gd" id="1_smp25"]
[ext_resource type="Material" uid="uid://c66sx2445ai3k" path="res://addons/go_p2p/template/3D/outline_red_material.tres" id="2_wki5m"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nqfc2"]
resource_name = "bomb"
next_pass = ExtResource("2_wki5m")
cull_mode = 2
shading_mode = 0
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="ArrayMesh" id="ArrayMesh_63wr4"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2.52849, 2),
"format": 34359742465,
"index_count": 276,
"index_data": PackedByteArray("AAAPAAIAHQAAAAIAAAAeAA8AHQAeAAAAHwACAA8AHgABAA8AHwAPABIAEgAPAAEAHgAQAAEAHgAgABAAHQAgAB4AEAATAAEAEAAgABMAEgABAAUABQABABMAEgAHAB8ABQAhABIAEgAhAAcABQATACIAIAAEABMAIgATAAQAIAAUAAQAIgAJAAUABQAJACEAIAAjABQAIAAdACMAFAAVAAQAFAAjABUAIgAEABYAFgAEABUAIwAdABEAFgAXACIAIgAXAAkAIwADABUAIwARAAMAEQAdACQAEQAkAAMAHQACACQAJQAVAAMAFgAVACUABgADACQAJQADAAYAJgAkAAIABgAkACYAJgACAB8AJQAKABYAFgAKABcABgAYACUAJQAYAAoAJgAIAAYABgAIABgAHwAnACYAJgAnAAgAHwAHACcAKAAKABgAKQAYAAgAKAAYACkADAAIACcAKQAIAAwAKgAnAAcADAAnACoADAAcACkAKgAHABkADAANABwAKgANAAwAKQAcABsAKQAbACgADQAbABwAGQAHACEAKgArAA0AGQArACoAKAAbACwADQAOABsAGwAOACwAGgANACsAGQAaACsADgANABoAKAAsAC0ALQAsAA4ALQAKACgALQAXAAoACwAXAC0ALQAOAAsACwAJABcADgAaAC4ACwAOAC4ALwAuABoACwAuAC8ALwAaABkALwAJAAsAGQAhAC8ALwAhAAkA"),
"lods": [0.335478, PackedByteArray("AAAPAAIAAAAQAA8AEQAAAAIAEQAQAAAAEgACAA8AEAABAA8AEgAPAAEAEAATAAEAEgABAAUABQABABMAEAAUABMAEQAUABAAFAAEABMABQATAAQAFAARABUAFAAVAAQAEQADABUAEQACAAMAFgAEABUAFgAVAAMABQAEABYABgADAAIABgACABIAFgADAAYABQAHABIAEgAHAAYAFgAXAAUABQAXAAkABQAJAAcACwAJABcACwAHAAkABgAHAAgABgAYABYABgAIABgAFgAKABcAFgAYAAoACwAXAAoADAAYAAgADAAKABgADAAIAAcACwAKAAwAGQAHAAsADAAHABkACwAaABkAGQAaAAwACwAOABoADAAaAA0ADgANABoACwAbAA4ADQAOABsADAAbAAsADQAbABwADAAcABsADAANABwA"), 1.16478, PackedByteArray("AAABAAIAAAAAAAEAAAACAAMAAAAEAAEAAAADAAQABQACAAEABQABAAQABgADAAIABgAEAAMABgACAAUABQAEAAYABQAHAAYABgAHAAgABQAJAAcABgAKAAUABQAKAAkABgAIAAoACwAHAAkACwAJAAoADAAIAAcADAAKAAgADAAHAAsACwAKAAwACwANAAwADAANAA4ACwAOAA0ADAAOAAsA")],
"name": "bomb",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 48,
"vertex_data": PackedByteArray("AAAAAAAAgL8AAIC/AACAPwAAgD8AAACAAAAAAAAAgD8AAIC/AACAvwAAgD8AAACAAAAAAAAAgD8AAIA/POpAPwAAgD8AAACAPOpAvwAAgD8AAACAAAAAAHylwz886kC/POpAv3ylwz8AAACAPOpAP3ylwz8AAACAAAAAAHylwz886kA/uSiPPnylwz8AAACAuSiPvnylwz8AAACAuSiPvqqkHD8AAACAuSiPPqqkHD8AAACA8wQ1PwAAgD/zBDW/AACAPwAAgL8AAACAAACAvwAAgL8AAACAWGkIPwAAgD9YaQi/8wQ1PwAAgD/zBDU/AAAAAAAAgL8AAIA/8wQ1vwAAgD/zBDU/AAAAAAAAgD886kA/WGkIP3ylwz9YaQg/WGkIv3ylwz9YaQg/AAAAAHylwz+5KI++AAAAAKqkHD+5KI++AAAAAKqkHD+5KI8+InVKvqqkHD8idUo+8wQ1vwAAgL/zBDW/8wQ1PwAAgL/zBDW/AAAAAAAAgD886kC/8wQ1PwAAgL/zBDU/WGkIP3ylwz9YaQi/WGkIPwAAgD9YaQg/8wQ1vwAAgL/zBDU/8wQ1vwAAgD/zBDW/WGkIvwAAgD9YaQg/WGkIvwAAgD9YaQi/WGkIv3ylwz9YaQi/AAAAAHylwz+5KI8+InVKvnylwz8idUo+InVKvnylwz8idUq+InVKvqqkHD8idUq+InVKPqqkHD8idUo+InVKPnylwz8idUo+InVKPqqkHD8idUq+InVKPnylwz8idUq+")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_fmvxl"]
resource_name = "bomb3d_Cylinder"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2.52849, 2),
"attribute_data": PackedByteArray("AACAPwAAAD8AAEA/AAAAAAAAgD8AAAAAAAAAAAAAAD8AAAA/AAAAAAAAgD4AAAAAAAAAAAAAAABumo09AABAP26ajT0AAEA/AACAPrJMbj9kmdw+AABAP2SZ3D4AAEA/ZJncPgAAQD8AAIA+XI8CP0jh+j4AAEA/AACAPqRwfT9umo09AABAPxDXIzwAAEA/ZJncPgAAQD9kmdw+AABAP/7/fz5OsxE/bpqNPQAAQD9umo09AABAP7Fboj4AAEA//v9/Pk6zET9kmdw+AABAPwAAgD6yTG4/nUg7PgAAQD9umo09AABAP7Fboj4AAEA/sVuiPgAAQD+dSDs+AABAP51IOz4AAEA/nUg7PgAAQD+xW6I+AABAP7Fboj4AAEA/nUg7PgAAQD8AAGA/AAAAAAAAQD8AAAA/AAAgPwAAAAAAAAA/AAAAPwAAwD4AAAAAAACAPgAAAD8AAIA+skxuPwYX+j0fvWA/P3rBPh+9YD9cjwI/AABAP6RwfT8AAEA/AABAP1yPAj8AAEA/pHB9Pz56wT7hQh8/qOPWPiyOFD+o49Y+1HFrPwAAgD6yTG4/YnGkPdRxaz8AAIA+2S1RPwJpTz7AJUw/PnrBPuFCHz/+/38+KNIuPz96wT4fvWA/Bhf6PR+9YD+dSDs+AABAPwAAgD7ZLVE/AmlPPsAlTD+xW6I+AABAP/7/fz4o0i4//v9/PijSLj/+/38+KNIuPwAAYD8AAAA/AABgPwAAAD8AAEA/AAAAAAAAYD8AAAAAAABAPwAAAD8AACA/AAAAAAAAID8AAAA/AAAgPwAAAD8AAAA/AAAAPwAAAD8AAAAAAADAPgAAAD8AAMA+AAAAPwAAwD4AAAAABhf6PR+9YD8AAIA+skxuPwAAgD6yTG4/AACAPgAAAD8AAAA+AAAAAAAAgD4AAAAAAAAAPgAAAD8AAAA+AAAAPwAAAD4AAAAALI4UPyyOFD/UcWs/LI4UP9Rxaz/UcWs/LI4UP9Rxaz/+/38+TrMRPwYX+j3hQh8/YnGkPSyOFD8/esE+H71gPwYX+j0fvWA/fkuYPsAlTD9+S5g+wCVMPz96wT4fvWA/P3rBPh+9YD/+/38+TrMRPz56wT7hQh8//v9/Pk6zET8GF/o94UIfPwYX+j3hQh8//v9/Pk6zET8GF/o9H71gPwYX+j0fvWA/P3rBPh+9YD8+esE+4UIfPz56wT7hQh8/Bhf6PeFCHz8GF/o94UIfPz56wT7hQh8/fkuYPkLaMz8CaU8+QNozPwYX+j3hQh8/fkuYPsAlTD8AAIA+2S1RPwJpTz7AJUw/fkuYPkLaMz8CaU8+QNozP35LmD7AJUw/fkuYPkLaMz/+/38+KNIuP/7/fz4o0i4/fkuYPkLaMz8CaU8+QNozPwJpTz5A2jM/AmlPPsAlTD8CaU8+wCVMPwAAgD7ZLVE/fkuYPsAlTD9+S5g+wCVMPwAAgD7ZLVE/fkuYPkLaMz9+S5g+QtozPwJpTz5A2jM/AmlPPkDaMz8CaU8+wCVMPwAAgD7ZLVE/"),
"format": 34359742487,
"index_count": 276,
"index_data": PackedByteArray("AAAlAAIAAABEACUARQBGAEcARQBIAEYAJgBJAAEAJgBKAEkASwAEACcASwAoAAQATAApAE0ATABOACkATwAFAFAATwAqAAUAUQBSAFMAUQAsAFIAVABVAFYAVABXAFUAWAAGAFkAWAADAAYAWgBbADAAWgBcAFsAWwBcAC8AXABaAF0AXQBaAC4AXABdADEAXgAzADIAMgAzAA4AXgANADMAMgAOAAwAXwANAF4ADAAOADQAXwBgAA0ADAA0AGEAEABgAF8AYQA0AA8AEAARAGAAYQAPADUAYgARABAANQAPADYAYgA2ABEANQA2AGIAYwAiACMAYwBkACIAZQALAAoAZQBmAAsAOQAUAGcAOQBoABQAaQBqAGsAaQBsAGoABwBtAG4ABwAIAG0AKwAtAG8AKwAJAC0AEgBwAHEAEgATAHAAcgAWABUAcgBzABYAOgB0AHUAdQB0ABkAOgAYAHQAdQAZABcAdgAYADoAFwAZADsAdgB3ABgAFwA7AHgAGwB3AHYAeAA7ABoAGwAcAHcAeAAaAHkAegAcABsAeQAaADwAegA8ABwAeQA8AHoAQABBAHsAQAA9AEEAQQA9AHwAPQBAAD4APgBAAH0APQA+AD8AfgB/AIAAfgCBAH8AQwCCAIMAQwBCAIIAIQCEAIUAIQAkAIQAhgCHAIgAhgCJAIcAHQCKAIsAHQAeAIoAjAAfACAAjACNAB8AjgA3AI8AjgA4ADcA"),
"lods": [0.335478, PackedByteArray("AAAlAAIAAAAmACUAJgABACUAJgAnAAEAJgAoACcAKAAEACcAKAApAAQAKAAqACkAKgAFACkAKgAGAAUAKgADAAYAKwAsAAkAKwAJAC0ABwAsACsABwAIACwAKwAtAAoACgAtAAsALgAvADAALgAxAC8AMgANADMAMgAzAA4AEAANADIAMgAOAAwAEAARAA0ADAAOADQANQARABAADAA0AA8ADAAPADUANQA2ABEANQAPADYAIwA3ACIAIQA3ACMAIQA4ADcAIQAkADgAOQAUABUAFQAUABYAEgAUADkAEgATABQAOgAYABcAFwAYABkAFwAZADsAGwAYADoAFwA7ABoAFwAaABsAGwAaADwAGwAcABgAGwA8ABwAPQA+AD8APQBAAD4AQAA9AEEAHQBCAEMAHQAeAEIAQwBCACAAIABCAB8A"), 1.16478, PackedByteArray("AAABAAIAAAADAAEAAwAEAAEAAwAFAAQAAwAGAAUABwAIAAkABwAJAAoACgAJAAsADAANAA4ADAAOAA8AEAANAAwADAAPABAAEAARAA0AEAAPABEAEgATABQAEgAUABUAFQAUABYAFwAYABkAFwAZABoAGwAYABcAFwAaABsAGwAcABgAGwAaABwAHQAeAB8AHQAfACAAIQAiACMAIQAkACIA")],
"material": SubResource("StandardMaterial3D_nqfc2"),
"name": "bomb",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 144,
"vertex_data": PackedByteArray("AAAAAAAAgL8AAIC/AACAPwAAgD8AAACAAAAAAAAAgD8AAIC/AAAAAAAAgL8AAIC/AAAAAAAAgD8AAIA/AACAvwAAgD8AAACAAAAAAAAAgD8AAIC/POpAvwAAgD8AAACAPOpAv3ylwz8AAACAAAAAAHylwz886kA/POpAPwAAgD8AAACAPOpAP3ylwz8AAACAPOpAPwAAgD8AAACAAAAAAAAAgD8AAIC/AACAPwAAgD8AAACAAAAAAAAAgD8AAIA/POpAvwAAgD8AAACAAACAvwAAgD8AAACAPOpAPwAAgD8AAACAPOpAP3ylwz8AAACAAAAAAHylwz886kC/POpAvwAAgD8AAACAPOpAv3ylwz8AAACAuSiPPnylwz8AAACAAAAAAHylwz886kC/POpAP3ylwz8AAACAAAAAAHylwz886kA/uSiPvnylwz8AAACAPOpAv3ylwz8AAACAuSiPPnylwz8AAACAuSiPPqqkHD8AAACAuSiPvqqkHD8AAACAuSiPvnylwz8AAACAuSiPvnylwz8AAACAuSiPPqqkHD8AAACAuSiPPnylwz8AAACAuSiPvqqkHD8AAACA8wQ1PwAAgD/zBDW/AACAPwAAgL8AAACA8wQ1PwAAgD/zBDU/AAAAAAAAgL8AAIA/8wQ1vwAAgD/zBDU/AACAvwAAgL8AAACAAAAAAAAAgD886kA/WGkIv3ylwz9YaQg/WGkIP3ylwz9YaQg/AACAvwAAgL8AAACAAACAPwAAgL8AAACAAAAAAAAAgL8AAIC/AAAAAAAAgL8AAIA/WGkIPwAAgD9YaQi/8wQ1PwAAgD/zBDW/8wQ1PwAAgD/zBDU/AAAAAAAAgD886kA/8wQ1vwAAgD/zBDU/AAAAAKqkHD+5KI8+InVKvqqkHD8idUo+WGkIPwAAgD9YaQi/AAAAAHylwz+5KI++WGkIP3ylwz9YaQg/WGkIv3ylwz9YaQg/uSiPvqqkHD8AAACAAAAAAKqkHD+5KI8+InVKvqqkHD8idUo+uSiPPqqkHD8AAACAAAAAAKqkHD+5KI++AAAAAKqkHD+5KI++AAAAAHylwz+5KI++8wQ1PwAAgL/zBDW/8wQ1PwAAgL/zBDW/AACAPwAAgD8AAACA8wQ1PwAAgD/zBDW/AACAPwAAgL8AAACA8wQ1PwAAgD/zBDU/8wQ1PwAAgL/zBDU/8wQ1PwAAgL/zBDU/AAAAAAAAgL8AAIA/AAAAAAAAgD8AAIA/8wQ1vwAAgL/zBDU/8wQ1vwAAgL/zBDU/8wQ1vwAAgD/zBDU/WGkIvwAAgD9YaQg/AAAAAHylwz886kA/AAAAAAAAgD886kA/AACAvwAAgL8AAACA8wQ1vwAAgD/zBDW/AACAvwAAgD8AAACA8wQ1vwAAgL/zBDW/8wQ1vwAAgL/zBDW/8wQ1vwAAgD/zBDW/8wQ1vwAAgL/zBDW/8wQ1PwAAgL/zBDW/8wQ1PwAAgL/zBDU/8wQ1vwAAgL/zBDU/AAAAAAAAgD886kC/WGkIvwAAgD9YaQi/8wQ1vwAAgD/zBDW/WGkIPwAAgD9YaQg/WGkIvwAAgD9YaQg/InVKPnylwz8idUo+InVKPqqkHD8idUo+WGkIPwAAgD9YaQg/WGkIP3ylwz9YaQg/AAAAAAAAgD886kC/WGkIP3ylwz9YaQi/AAAAAAAAgD886kC/WGkIv3ylwz9YaQi/WGkIvwAAgD9YaQi/AAAAAHylwz886kC/WGkIv3ylwz9YaQg/WGkIvwAAgD9YaQg/WGkIPwAAgD9YaQg/WGkIP3ylwz9YaQi/WGkIPwAAgD9YaQi/WGkIvwAAgD9YaQi/WGkIv3ylwz9YaQi/WGkIP3ylwz9YaQi/InVKPnylwz8idUq+InVKvnylwz8idUq+WGkIv3ylwz9YaQi/InVKPnylwz8idUo+AAAAAHylwz+5KI8+InVKvnylwz8idUo+InVKPqqkHD8idUq+InVKvqqkHD8idUq+InVKPqqkHD8idUo+InVKPnylwz8idUq+AAAAAKqkHD+5KI++AAAAAHylwz+5KI++InVKPqqkHD8idUq+InVKvqqkHD8idUq+InVKvnylwz8idUq+InVKvqqkHD8idUo+InVKvnylwz8idUo+AAAAAHylwz+5KI8+InVKPqqkHD8idUo+InVKPnylwz8idUo+AAAAAKqkHD+5KI8+InVKPqqkHD8idUq+InVKPnylwz8idUq+InVKvnylwz8idUq+InVKvqqkHD8idUq+InVKvnylwz8idUo+AAAAAHylwz+5KI8+//+B2gAAvtKB2v9///9A7f//gdoAAL7SAACB2n0l/799pf9///++0n0l/399pf+/AACB2n0l/799Jf9/////P30l/3////8/faX/f////z+B2v9/////P4Ha/3////8//3///////7//f///////v/9////+//+//3///////7//f///////v/9////+//+///99pf///7///32l////v///gdr///+/AAB9pf///78AAH2l////v/9////+//+//3///////7//f////v//v/9///////+//3////7//7//f///////v30l/3////8/fSX/f////z+B2v9/////P4Ha/3////8///99pf///78AAH2l////vwAAfaX///+///99pf///7///4HaAAC+0oHa/3///0DtfaX/f///vtJ9pf9///++0oFa/3+B2v+/fSX/f32l/799pf9/////P4Fa/3////8/faX/f////z//fwAA////P/9/AAD///8//38AAP///z//fwAA////P/9////+//+//3////7//7//f///////v/9///////+//3////7//7///4Ha////v///gdr///+///+B2v///7//f///////v/9////+//+//3///////7//f///////v/9///////+//3////7//7//f///////v/9///////+/faX/f////z99pf9/////P///gdoAAL7S//99pQAAQO3//32lAABA7f//faUAAEDt//99pQAAQO2B2v9///9A7YHa/3///0DtfaX/f///vtKBWv9/gdr/v4Fa/3+B2v+/gVr/f4Ha/799Jf9/faX/v30l/399pf+/gVr/f////z+BWv9/////P4Fa/3////8/AAB9pYFa/78AAH2lgVr/vwAAfaWBWv+/AAB9pYFa/78AAIHafSX/vwAAgdp9Jf+//38AAP///z//fwAA////P/9/AAD///8//38AAP///z//f///////v/9///////+//3///////7//f///////v/9////+//+/AAB9pf///78AAH2l////v4Ha/3////8/gdr/f////z///4Ha////v///gdr///+/AACB2v///78AAIHa////vwAAgdr///+/AACB2v///799Jf9/////P30l/3////8/faX/f////z///32l////v///faX///+/AAB9pf///78AAH2l////v/9////+//+//3///////7//f////v//v/9////+//+//3////7//7//f///////v/9///////+//3///////7//f///////v/9///////+/gVr/f////z+BWv9/////P4Fa/3////8/gVr/f////z99pf9/////P32l/3////8///99pf///7///32l////vwAAgdr///+/AACB2v///78AAIHa////vwAAgdr///+/fSX/f////z99Jf9/////P4Ha/3////8/gdr/f////z///4Ha////v///gdr///+/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_63wr4")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cx664"]
resource_name = "fitl"
cull_mode = 2
shading_mode = 0
albedo_color = Color(0.772142, 0.600924, 0.298913, 1)

[sub_resource type="ArrayMesh" id="ArrayMesh_okop5"]
_surfaces = [{
"aabb": AABB(-0.662942, -0.07, -0.161471, 0.756057, 0.14, 0.410405),
"format": 34359742465,
"index_count": 354,
"index_data": PackedByteArray("CwAbABwAHAAbAB0AGwALAB4AGwAeAB0ACwAcADEAHAAdAB8AMQAcAB8AHQAeACAAHwAdABcAHQAgABcAHgAhACAACwAiAB4AHgAiACEACgALADEACwAKACIAMQAfADAAHwAXABYAMAAfABYAAAAxADAACgAxAAAAMAAWABQACgAjACIAAAAwADIAMgAwABQADAAKAAAACgAMACMAJgAAADIADAAAACYADAAmACUAJgAyACUADAAlACMAMgAUADMAJQAyADMAJQAzAA8AIwAlAA8AIgAjACQAIwAPACQAIgAkACEAMwAUAC8ADwAzAAEAMwAvAAEAJAAPABAADwABABAAIQAkAA4AJAAQAA4AIQAOADQAIAAhADQADgAQACcAIAA0ABoAFwAgABoANAAOABEADgAnABEAGgA0AA0ANAARAA0AFwAaABgAFgAXABgAGgANACwAGAAaACwAFgAYAC4AFAAWAC4AFAAuAC8ALgAYAC0AGAAsAC0ALwAuABUALgAtABUALwAVABMAAQAvABMAFQAtABkAAQATADUAEAABADUAEAA1ACcAEwAVACsAFQAZACsANQATADYAEwArADYAJwA1ACgANQA2ACgAJwAoABIAEQAnABIAKAA2ADcAEQASACkADQARACkAEgAoADgAKAA3ADgAKQASADkAEgA4ADkADQApADoALAANADoAKQA5ADsAOgApADsAOQA4AAUAOAADAAUAOAA3AAMAOQAFAAkAOwA5AAkANwACAAMAOwAJAAgANwA8AAIANgA8ADcAPAAEAAIANgArADwAPAA9AAQAKwA9ADwAPQAGAAQAKwAZAD0APQA+AAYAGQA+AD0APgAHAAYAGQAqAD4ALQAqABkALQAsACoALAA6ACoAKgA/AD4APgA/AAcAKgA6AD8APwAIAAcAOgA7AD8APwA7AAgA"),
"lods": [0.0205293, PackedByteArray("CwAbABwAHAAbAB0AGwALAB4AGwAeAB0ACwAcAAAAHAAdAB8AAAAcAB8AHQAeACAAHwAdABcAHQAgABcAHgAhACAACwAiAB4AHgAiACEACwAKACIACgALAAAAFwAgABoAIAAhABoACgAjACIAFwAaABgADAAKAAAACgAMACMAIgAjACQAIgAkACEADAAlACMADAAAACYADAAmACUAJgAAACUAIwAPACQAIwAlAA8AIQAkAA4AJQAAAAEAJQABAA8AJAAPABAAJAAQAA4ADwABABAAIQAOABEADgAQACcADgAnABEAEAAoACcAEAABACgAEQAnABIAJwAoABIAIQARAA0AGgAhAA0AEQASACkADQARACkAKQASAAgADQApAAgACAASAAkAEgAFAAkAEgAoAAUADQAIAAcAKAADAAUAKAATAAMAAQATACgAEwACAAMAKgANAAcAEwArAAIAKgAHAAYAKwAZAAIAGQAqAAYAAgAZAAQAGQAGAAQALAANACoAGgANACwALQAqABkALQAsACoAGAAaACwAGAAsAC0AFQAZACsAFQAtABkAEwAVACsALgAYAC0ALgAtABUALwAVABMALwAuABUAAQAvABMAAQAUAC8AFAAuAC8AAAAUAAEAFgAYAC4AFAAWAC4AFgAXABgAAAAwABQAMAAWABQAAAAfADAAHwAXABYAMAAfABYA"), 0.0574797, PackedByteArray("CgALAAAADAAKAAAACwAKAA0ACgAMAA4ACgAOAA0ADAAPAA4ADAAAAA8ADgAPABAADgAQABEADQAOABEADwABABAADwAAAAEAEQAQABIAEAABABIAEQASAAgADQARAAgACAASAAkADQAIAAcAEgAFAAkAEgABAAUAAQADAAUABgANAAcAAQATAAMAEwACAAMAAQAUABMAAAAUAAEAEwAVAAIAFAAVABMAAAAWABQAFAAWABUAAAAXABYAAAALABcAFgAYABUAFgAXABgAFQAZAAIAFQAYABkAAgAZAAQAGQAGAAQAGAAGABkAFwALABoAFwAaABgAGAAaAAYACwANABoAGgANAAYA"), 0.0925161, PackedByteArray("AAABAAEAAAAAAAEAAQACAAMAAQAEAAIAAQADAAUAAQAGAAQABgABAAcAAQAIAAcACQABAAUAAQAJAAgAAQABAAkA")],
"name": "fitl",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 64,
"vertex_data": PackedByteArray("sXclv829Sj3A9TY+l1W3vtK9Sj1vk7W9dQS6PeS9Sr1+LAS+ibO+PYgi5bKQCRm+nrWuPStcj70CnKO9dQS6PdS9Sj2ALAS+yWajPdu9Sr0ufPu8tbeePXjdmjJQJym8yWajPeG9Sj1GfPu8oLWuPSdcjz0KnKO9FLkMvxCwcLKU6H4+7fcQv+W9Sr1okHI+7vcQv9q9Sj1mkHI+F45ovnR6kTGgbhm8Ziyhvt+9Sj0Ao8I50NjZviRcjz2+ukA8/0CsviZcjz3Q0DS9q6Ftvt29Sj1qsO+8C44Uvihcjz3Rrru9FJyFvrLQLbMMshS+hKzvvnAhX7OQOzO9ShKDvua9Sr3qUgC+6kfpvui9Sr2gP+G8ztjZvi1cj73sukA8/kCsvi9cj73C0DS9CY4Uvi1cj73Krru9ZSyhvuO9Sr0Ap8I5zzcbvy9cj70Vw1Q+sXclv+69Sr3A9TY+Qq4Dvy5cj728WsE9rdj0vuO9Sr1MSQM+LfAMv+u9Sr27RXg9s2nKvuG9Sr1G/VA9GgXEvgAXcrGAzIk9Xy3tvjD4CbI0nxE+rtj0vtm9Sj1KSQM+tWnKvtu9Sj09/VA9Q64DvyRcjz22WsE90DcbvyRcjz0Tw1Q+IeN5viZcjz37SJ69gBgYvtS9Sj0sZxC+lAMRvuG9Sj2OHi29lAMRvuK9Sr2CHi29gBgYvum9Sr0qZxC+qqFtvuC9Sr1UsO+8H+N5vixcj730SJ69llW3vuu9Sr1sk7W9jOy7vkmzSrPGVtu91cUQvwx+drMa7j49irYpvwIWgLOUnSo+LvAMv829Sj21RXg96kfpvs29Sj2sP+G8cJWcvpA0K7H6F5o8SxKDvtG9Sj3sUgC++I8ZvsIWGbOmWCW+5Q8HvStF+rLE9yS+9x8Lvda9Sj1y/w++6e4UvShcjz1bvrq9HIwPvvakGzIssbK83r0eveK9Sj2a+yq99h8LveW9Sr1x/w++6u4UvSxcj71Uvrq93b0eveC9Sr2P+yq9780ivap1SzKUNK68")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_1c1lg"]
resource_name = "bomb3d_BézierCurve"
_surfaces = [{
"aabb": AABB(-0.662942, -0.07, -0.161471, 0.756057, 0.14, 0.410405),
"attribute_data": PackedByteArray("AAAAAAAAgD8AAIA+AACAPwAAgD4AAAAAAAAAAAAAAABVVRU/AABgP1VVFT8AAIA/VVUVPwAAQD9VVRU/AAAgP1VVFT8AAAA/VVUVPwAAwD5VVRU/AACAPlVVFT8AAAA+VVUVPwAAAAC3bds+AACAPyVJEj8AAIA/AAAAAAAAgD8lSZI+AACAPwAAAAAAAEA/q6oqPgAAYD8AAIA+AABAPwAAAAAAACA/AACAPgAAYD9VVdU+AABgP6uqqj4AAEA/q6qqPgAAID8AAAAAAAAAPwAAgD4AAAA/q6oqPgAAwD4AAIA+AADAPquqKj4AAIA+q6oqPgAAAD6rqqo+AACAPlVV1T4AAMA+q6qqPgAAAD5u2zY/AACAP7dtWz8AAIA/JUkSPgAAgD8AAAAAAABgP6uqqj0AAGA/q6qqPQAAQD9VVdU+AACAP6uqKj4AAEA/q6qqPQAAID+rqqo9AAAAPwAAAAAAAMA+q6oqPgAAID+rqqo+AABgP1VV1T4AAEA/VVXVPgAAAD9VVdU+AACAPlVV1T4AAAAAAACAPgAAAD6rqqo+AADAPgAAgD4AAIA+q6qqPQAAAD6rqqo+AAAAP6uqqj0AAIA+AAAAAAAAgD6rqio+AAAAP6uqqj0AAMA+AACAPwAAgD+rqqo9AAAAAAAAAAAAAAA+q6oqPgAAAAAAAIA+AAAgP6uqqj0AAIA/q6oqPgAAgD+rqqo+AACAPwAAAD8AAIA/AAAAPwAAYD8AAAA/AABAP1VV1T4AACA/AAAAPwAAID8AAAA/AAAAPwAAAD8AAMA+q6qqPgAAAAAAAAA/AACAPlVV1T4AAAA+AAAAPwAAAD4AAAA/AAAAAA=="),
"format": 34359742487,
"index_count": 354,
"index_data": PackedByteArray("DgAiACMADgAjADwADQAOADwADQA8AA8AEAANAA8AEAAPACQAAwA2AD0AAwA+ADYAPQA2AB4APQAeAD8APgA4ADYAPgA5ADgANgAdAB4ANgA4AB0APwAeADMAPwAzAAIAHgAdADUAHgA1ADMAOQA7ADgAOQAsADsAOAAbAB0AOAA7ABsAHQAcADUAHQAbABwALAArADsALAAZACsAOwA6ABsAOwArADoAGwAaABwAGwA6ABoAGQAqACsAGQAUACoAKwAtADoAKwAqAC0AOgBAABoAOgAtAEAAFAAnACoAFAARACcAKgApAC0AKgAnACkALQATAEAALQApABMAEQAmACcAEQAlACYAJQBBACYAJQAAAEEAJgBBAEIAJwAmABIAJgBCABIAJwASACkAEgBCAAEAKQASABUAEgABABUAKQAVABMAFQABAEMAFQBDAC4AEwAVAC4ALgBDACgAEwAuABcAQAATABcALgAoABYAFwAuABYAFgAoAEQAQAAXABgAGgBAABgAFwAWAC8AGAAXAC8AFgBEAEUALwAWAEUARQBEAAUARQAFAAQARgBFAAQALwBFAEYARgAEAAYAGAAvAEcARwAvAEYAGgAYADcANwAYAEcAHAAaADcASABGAAYARwBGAEgASAAGAAcANwBHADAAMABHAEgAHAA3ADQANAA3ADAANQAcADQASQBIAAcAMABIAEkASQAHAAgANAAwACAAIAAwAEkANQA0AB8AHwA0ACAAMwA1AB8ASgBJAAgAIABJAEoASgAIAAkAHwAgADEAMQAgAEoAMwAfACEAIQAfADEAAgAzACEAAgAhAEsATABKAAkAMQBKAEwATAAJAAoAIQAxAE0ASwAhAE0ATQAxAEwASwBNADIATgBMAAoATQBMAE4AMgBNAE4ATgAKAAsAMgBOAE8ATwBOAAsATwALAAwA"),
"lods": [0.0205293, PackedByteArray("DgAiACMADgAjAA8ADQAOAA8AEAANAA8AEAAPACQAJQAAACYAEQAlACYAJgAAAAEAEQAmACcAFAARACcAJgABABIAJwAmABIAEgABABUAFQABACgAJwASACkAKQASABUAFAAnACoAKgAnACkAGQAUACoAGQAqACsALAAZACsAKgApAC0AKwAqAC0AKQAVABMALQApABMAEwAVAC4AFQAoAC4AEwAuABcALQATABcALgAoABYAFwAuABYAFgAoAAUAFgAFAAQABgAWAAQAFwAWAC8ALwAWAAYAGAAXAC8AGAAvAAYALQAXABgAGAAGAAcAMAAYAAcAMAAHAAgAIAAwAAgAIAAIAAkACgAgAAkAMQAgAAoAIQAxAAoAIQAKAAsAHwAgADEAIQAfADEAMgAhAAsAMgALAAwAAgAhADIAMwAfACEAAgAzACEAHwA0ACAANAAwACAAMwA1AB8ANQA0AB8AAgAeADMAHgA1ADMAAwAeAAIAAwA2AB4ANAA3ADAANwAYADAANQAcADQAHAA3ADQAHgAdADUAHQAcADUANgAdAB4AAwA4ADYANgA4AB0AAwA5ADgAGgAYADcAHAAaADcAGgAtABgAHQAbABwAGwAaABwAOAAbAB0AOgAtABoAGwA6ABoAKwAtADoAOAA7ABsAOwA6ABsAOwArADoAOQA7ADgALAArADsAOQAsADsA"), 0.0574797, PackedByteArray("DQAOAA8AEAANAA8AEQAAABIAEgAAAAEAEQASABMAFAARABMAEgABABUAEwASABUAFQABABYAFgABAAUAFgAFAAQABgAWAAQAFwAVABYAFwAWAAYAEwAVABcAGAAXAAYAGAATABcAFAATABgAGAAGAAcAGQAUABgACAAYAAcAGQAYABoAGgAYAAgAGwAZABoAAwAZABsAHAAaAAgAGwAaABwAAwAbAB0AHQAbABwAAwAdAB4AAwAeAAIAHQAcAB8AHgAdAB8AHAAIACAAHwAcACAAIAAIAAkACgAgAAkAHwAgAAoAHgAfACEAIQAfAAoAAgAeACEAIQAKAAsAAgAhAAsAAgALAAwA"), 0.0925161, PackedByteArray("AAABAAIAAwAAAAIABAABAAUAAgABAAQAAgAEAAYAAgAGAAcACAACAAcAAgAIAAkAAgAJAAoAAgAKAAsAAgALAAwA")],
"material": SubResource("StandardMaterial3D_cx664"),
"name": "fitl",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 80,
"vertex_data": PackedByteArray("sXclv829Sj3A9TY+l1W3vtK9Sj1vk7W9l1W3vtK9Sj1vk7W9sXclv829Sj3A9TY+oLWuPSdcjz0KnKO9dQS6PdS9Sj2ALAS+yWajPeG9Sj1GfPu8tbeePXjdmjJQJym8yWajPdu9Sr0ufPu8nrWuPStcj70CnKO9dQS6PeS9Sr1+LAS+ibO+PYgi5bKQCRm+dQS6PdS9Sj2ALAS+FLkMvxCwcLKU6H4+7fcQv+W9Sr1okHI+sXclv829Sj3A9TY+7vcQv9q9Sj1mkHI+7vcQv9q9Sj1mkHI+0NjZviRcjz2+ukA8Ziyhvt+9Sj0Ao8I5FLkMvxCwcLKU6H4+/0CsviZcjz3Q0DS9C44Uvihcjz3Rrru9q6Ftvt29Sj1qsO+8F45ovnR6kTGgbhm87fcQv+W9Sr1okHI+ZSyhvuO9Sr0Ap8I5ztjZvi1cj73sukA8/kCsvi9cj73C0DS96kfpvui9Sr2gP+G8hKzvvnAhX7OQOzO9ShKDvua9Sr3qUgC+CY4Uvi1cj73Krru9FJyFvrLQLbMMshS+zzcbvy9cj70Vw1Q+sXclv+69Sr3A9TY+0DcbvyRcjz0Tw1Q+0DcbvyRcjz0Tw1Q+Q64DvyRcjz22WsE9rtj0vtm9Sj1KSQM+gBgYvtS9Sj0sZxC+tWnKvtu9Sj09/VA9Xy3tvjD4CbI0nxE+rdj0vuO9Sr1MSQM+zzcbvy9cj70Vw1Q+GgXEvgAXcrGAzIk9IeN5viZcjz37SJ69lAMRvuG9Sj2OHi29lAMRvuK9Sr2CHi29gBgYvum9Sr0qZxC+gBgYvtS9Sj0sZxC+jOy7vkmzSrPGVtu9H+N5vixcj730SJ69llW3vuu9Sr1sk7W91cUQvwx+drMa7j49qqFtvuC9Sr1UsO+8LfAMv+u9Sr27RXg9sXclv+69Sr3A9TY+s2nKvuG9Sr1G/VA9Qq4Dvy5cj728WsE9irYpvwIWgLOUnSo+LvAMv829Sj21RXg9irYpvwIWgLOUnSo+6kfpvs29Sj2sP+G8cJWcvpA0K7H6F5o8LvAMv829Sj21RXg96kfpvs29Sj2sP+G8SxKDvtG9Sj3sUgC+9x8Lvda9Sj1y/w++6e4UvShcjz1bvrq93r0eveK9Sj2a+yq9HIwPvvakGzIssbK8780ivap1SzKUNK683b0eveC9Sr2P+yq96u4UvSxcj71Uvrq9SxKDvtG9Sj3sUgC+9h8LveW9Sr1x/w+++I8ZvsIWGbOmWCW+5Q8HvStF+rLE9yS+9x8Lvda9Sj1y/w++kjRb1v7/qxyqNa7n/f/wVKo1ruf+/xArkjRb1v3/qxylgPH/GvX/P+vCU/oh9f4/VHp6vRT1AEAVdf9/FfX/P1R6hEIW9QBApYANACH1AEDrwqsFJ/X/P///KPUo9f8/68JT+if1/z8eSv9/////Px5K/3////8/Hkr/f////z8eSv9/////Pwmps7X9/1ljBHxI/vr/zVuOl/+3/f8NK7TG/3///6UcpHuS/v7/8VSMfc7/9//MO7eNArv8/0IzcJn/f///RzMJqUtK/v9ZY46X/0f8/w4rBHy2Afr/MiSke2wB/v8RK0802SD+/zgkAABzyP//OSTMOD0O/P/MTIx9MAD3/zREAABj5v//MjMeSv9/////Px5K/3////8/Hkr/f////z+1fb3+/f9VY/l8cv77/xRhYKbLtf3/GWEVPY/79//BOwagUbb+/9FbNML/f///5R5gpjNK/v/lHrV9QQH9/6ccp7f/f///KyROfDz/+f83MzaEwr7+/yJENoQ8Qf7/I0QVPW8E/P89RBU9j/v+/z5EAAAi1v//EStRfL8A+//DTKo1UBj8/+5UAADgvf//8B63jfxE/v+6TEo0HCf9/+4ekjSjKf3/qxwGoK1J/v8tJPl8jAH7/+keHkr/f////z9KNOLY/f/vHgAAWLn//6wcTzQl3/3/OSThqf9///8OK0o04tj8/xFhTzQl3/v/yFvMOMHx/P8zM/LB+/wc+v0/Z4Hy/w/6/T/0fPy+Avr/PzuI/3///+E7AHr/f//5/z/0fAJBAvoBQGeBDAAU+gFAzDjB8f3/zUzywQMDJPr/PwAAgPf//8A7//8p+in6/z/ywfv8JPoAQA==")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_okop5")

[sub_resource type="ArrayMesh" id="ArrayMesh_q427a"]
_surfaces = [{
"aabb": AABB(-0.948735, -0.977528, -0.941772, 1.91095, 1.965, 1.9101),
"format": 34896613377,
"index_count": 240,
"index_data": PackedByteArray("BgAEABIABAATABIAEgAUAAYAEgATABQABgAKAAQAFQAGABQABwAGABUABwAKAAYAFQAUAAIAAgAHABUAFgACABQAFgAUABcAFwAUABMAGAACABYAFwAYABYAAgAPAAcAGAAPAAIAFwATABkADwAaAAcAGgAKAAcAFwAbABgAGQAbABcACQAPABgAGwAJABgADwAcABoACQAcAA8AGQAFABsAEwAFABkAGwADAAkABQADABsAHQAcAAkAAwAdAAkAEwAOAAUABAAOABMABQAeAAMADgAeAAUAHwAOAAQACgAfAAQADgAgAB4AHwAgAA4AHgAhAAMAAwAhAB0AIAARAB4AHgARACEACgAiAB8AGgAiAAoADAAgAB8AIgAMAB8ADQAiABoAHAANABoAIgALAAwADQALACIAHAAIAA0AHQAIABwAAAALAA0ADAALAAAAIwANAAgAAAANACMAIwAIACQAJAAAACMAJAAIAB0AJAAdACUAJQAdACEAJQAhABAAEAAkACUAEAAhABEAJAAmAAAAEAAmACQAJwAAACYADAAAACcAJwAmACgAKAAMACcAKAAmABAAEAARACkAKAAQACkAKQARAAEAKQABACgAKAABAAwAIAABABEADAABACAA"),
"lods": [0.216922, PackedByteArray("BgAKAAQABwAKAAYACgALAAQABwALAAoACwAMAAQADQALAAcADAALAAAAAAALAA0ADAABAAQAAAABAAwABAAOAAYABAABAA4ABwAGAAIAAgAGAA4ACAANAAcAAAANAAgADwAIAAcAAgAPAAcACQAIAA8ACQAPAAIACAAJABAAEAAAAAgAAgADAAkAEAAJAAMAAgAOAAUABQADAAIADgABAAUAEAADABEAAAAQABEABQARAAMAEQABAAAAAQARAAUA"), 0.493928, PackedByteArray("BgAAAAQAAAABAAQABwAAAAYABAABAAUABAAFAAYAAAADAAEABQABAAMACAAAAAcAAwAAAAgABwAGAAIAAgAGAAUAAgAIAAcABQADAAIACAAJAAMAAgADAAkACQAIAAIA"), 0.572077, PackedByteArray("AAABAAQABAABAAUAAAADAAEABQABAAMAAgAAAAQAAgAEAAUAAwAAAAIABQADAAIA"), 0.703318, PackedByteArray("AAABAAIAAQADAAIAAwAAAAIAAAADAAEA")],
"name": "bomb",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 42,
"vertex_data": PackedByteArray("IWeeB4NRAABq3uk8eUYAAHBLJ/E8nQAA2cvgghboAACpl962LgsAALzu0b2cjwAAXF1O68BBAACoDmW6/2QAAOcroDe2wQAAomu+gP//AAA/QZq4gBsAAJhIIzGWJwAA+Jr+NmkXAACJGDQzZm4AAI3d6LrVPAAAjyJbwN+7AABMrA4VCrYAAFLvgEO3lQAAuZAU460uAAANt97qj1QAAFGC//8JdwAAoDZQ5/RpAAAYdCLrrsIAAGimiPBsrQAAwGyswRHrAADhyrbmdYYAAAAA8XRiZgAAcMCWwn/WAABXFdB6ysoAABZz+z9c7gAA//96gBeWAAC/mxR1AAAAAKXsyXpaNwAAT8MKQzLaAABbOZ1y0REAAGRDTg3JdwAAbld3C1WoAABXfVoXHMoAAJmLAACfhQAA/5akEWw/AACzu0MR2WIAAOTNUBsNkQAA")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_f7ba1"]
resource_name = "bomb3d_Mesh"
_surfaces = [{
"aabb": AABB(-0.948735, -0.977528, -0.941772, 1.91095, 1.965, 1.9101),
"format": 34896613383,
"index_count": 240,
"index_data": PackedByteArray("EgATABQAEgAVABMAFgAXABUAFgAVAAcABwAVABgABwAYABkAGgAHABkAGgAbAAcAHAAdAAcAHAAeAB0AHwAgAB0AHwAhACAAIgAhAB4AIgAeACMAJAAiACMAJAAlACIAJgAnAB0AJgAoACcAJwAoAAwAJwAMACkACgApAAQACgAqACkACQAeAA8ACQAPACsALAADAAkALAAJAC0ALQAPAC4ALQAuAC8AMAAsAC0AMAAtADEAMgAuADMAMgAzADAANAAzAAIANAA1ADMANgA3ACkANgABADcANwA4ADkANwA5ADoAKQA7AA4AKQAOABMAEwAOADwAEwA8AD0APgA7ADoAPgA6AD8APQBAAEEAPQBBAAYAQgBBAEMAQgBDAEQAQwA+AAUAQwAFAEQABQA6AEUAOgBGAEUAOgARAEYABQBFAEcASAAFAEcASABHAEkASgBLABEASgARAEwASgBNAE4ASgBPAE0AUABPAAAAUAAAAFEAUgBTAEoAUgBKAFQAVABVAFIAVAA5AFUAVgAAAFcAVgBXAFgAWABVADYAWAA2AFkANgBaAFYANgALAFoAWwALAA0AWwANAFwAUQANAAgAUQAIAF0AXQAIAF4AXQBeAF8AYABhABAAYABiAGEA"),
"lods": [0.216922, PackedByteArray("BgAKAAQABwAKAAYACgALAAQABwALAAoACwAMAAQADQALAAcADAALAAAAAAALAA0ADAABAAQAAAABAAwABAAOAAYABAABAA4ABwAGAAIAAgAGAA4ACAANAAcAAAANAAgADwAIAAcAAgAPAAcACQAIAA8ACQAPAAIACAAJABAAEAAAAAgAAgADAAkAEAAJAAMAAgAOAAUABQADAAIADgABAAUAEAADABEAAAAQABEABQARAAMAEQABAAAAAQARAAUA"), 0.493928, PackedByteArray("BgAAAAQAAAABAAQABwAAAAYABAABAAUABAAFAAYAAAADAAEABQABAAMACAAAAAcAAwAAAAgABwAGAAIAAgAGAAUAAgAIAAcABQADAAIACAAJAAMAAgADAAkACQAIAAIA"), 0.572077, PackedByteArray("AAABAAQABAABAAUAAAADAAEABQABAAMAAgAAAAQAAgAEAAUAAwAAAAIABQADAAIA"), 0.703318, PackedByteArray("AAABAAIAAQADAAIAAwAAAAIAAAADAAEA")],
"material": SubResource("StandardMaterial3D_nqfc2"),
"name": "bomb",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 99,
"vertex_data": PackedByteArray("IWeeB4NROfFq3uk8eUaY/XBLJ/E8nXDh2cvgghbolN+pl962Lgtd77zu0b2cj4z+XF1O68BBFv+oDmW6/2RM0OcroDe2wa2tomu+gP//crk/QZq4gBuM9JhIIzGWJ9/l+Jr+NmkXQPeJGDQzZm460Y3d6LrVPHfyjyJbwN+7KLlMrA4VCrYh6FLvgEO3lYb6XF1O68BBFf+pl962Lgtb77mQFOOtLkntP0GauIAbivQAAPF0Yma0x1s5nXLREY7oXF1O68BBF/+gNlDn9Gnr53BLJ/E8nXDhjyJbwN+7KrmPIlvA37spuQAA8XRiZrTHVxXQesrKZKlXFdB6ysplqYkYNDNmbjnR5yugN7bBqq0Wc/s/XO6hx6JrvoD//3K52cvgghbok99PwwpDMto+3IkYNDNmbjnRWzmdctERj+iYSCMxliff5b+bFHUAAFP9WzmdctERkOjAbKzBEesoxXDAlsJ/1srswGyswRHrKcVwSyfxPJ1v4Rh0IuuuwhzhaKaI8Gytq/oYdCLrrsId4Rh0Iuuuwh/hUYL//wl37/2gNlDn9Gns51xdTuvAQRf/+Jr+NmkXQPel7Ml6Wjf3+Wre6Tx5Rpj9Uu+AQ7eVhvr//3qAF5YE/6XsyXpaN/f5Dbfe6o9UPfG5kBTjrS5I7Y3d6LrVPHnyvO7RvZyPjP4Nt97qj1Q98VGC//8Jd+/9aKaI8GytrfoNt97qj1Q+8eHKtuZ1htv62cvgghbolN9PwwpDMto/3HDAlsJ/1svs4cq25nWG3PpopojwbK2s+kysDhUKtiLoT8MKQzLaP9zkzVAbDZHn9G5XdwtVqEn9V31aFxzKEuOZiwAAn4WF+25XdwtVqEf9ZENODcl3L+ezu0MR2WLI/5mLAACfhYX75M1QGw2R6PRq3uk8eUaY/f+WpBFsP5f2mYsAAJ+Fhfuzu0MR2WLI//+WpBFsP5j2IWeeB4NROfEhZ54Hg1E58WRDTg3Jdy/nbld3C1WoSP0Wc/s/XO6hx1d9WhccyhHjV31aFxzKEONPwwpDMto+3BZz+z9c7qLHK0mB+LQeM8Yngfa655xddc7CLjx0GLYs3r+WF3h4gtWMRPLlP3jIi6tbGMPtVJTpgjaCyzWsKP2dywCM3oPkxFqD8E7/qsNm3r+YF87CLzyeui0drFsZw9l3sP5wWrTT3r+YF1dzBMEmgfe63oPlxN6D5sTWd7D+em5R0ntuVNIzrCj9jkTu5X5oAnA9eMeL5pxbdRSPNGA1rCj9b1qz0+5UlemywapKblqy04GN8Jw6nl6Qgo3xnCeB9rq4jLWojZJRqbmMtai4jLao1L5ZAVdzA8Hev5cXgTaBy5HJQnGzHjPGAKvDZhS6CoCSyUNx7ERBDJ66LR2aywKMcxi3LO5EPwzUvlgBjpJSqexEQAyBK7Ec55xbdRWPNGA6nl6QfyuyHI6SUalbg/BOE48yYIqZ7VP/0sXwfm9LXGuBmEL/0sTwZL6I+SkzGeJsgZlCi5ntU7QeM8bpPEXhbYGYQikzGOLoPEThLEmB+CxJgvhivoj5AdPE8HxoA3B9b0xcfm9MXBOPM2B+aAJw")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_q427a")

[sub_resource type="SphereShape3D" id="SphereShape3D_1hnxs"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1hnxs"]
shading_mode = 0
albedo_color = Color(1, 0.556863, 0.309804, 1)
grow_amount = 11.512

[sub_resource type="BoxMesh" id="BoxMesh_1hnxs"]
material = SubResource("StandardMaterial3D_1hnxs")

[sub_resource type="Curve" id="Curve_1hnxs"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.619355, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[node name="Bomb" type="Area3D"]
collision_mask = 2048
script = ExtResource("1_smp25")

[node name="model" type="Node3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0)

[node name="bomb_head" type="MeshInstance3D" parent="model"]
transform = Transform3D(0.321053, 0, 0, 0, 0.0945243, 0, 0, 0, 0.321053, 0, 0.926083, 0)
mesh = SubResource("ArrayMesh_fmvxl")
skeleton = NodePath("")

[node name="fitl" type="MeshInstance3D" parent="model"]
transform = Transform3D(0, 0, -1, -1, 0, 0, 0, 1, 0, -0.0881121, 1.09722, 0)
mesh = SubResource("ArrayMesh_1c1lg")
skeleton = NodePath("")

[node name="bomb_case" type="MeshInstance3D" parent="model"]
mesh = SubResource("ArrayMesh_f7ba1")
skeleton = NodePath("")

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_1hnxs")

[node name="Particles" type="CPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0858546, 0.505742, 0)
amount = 12
mesh = SubResource("BoxMesh_1hnxs")
direction = Vector3(0, 1, 0)
spread = 25.0
gravity = Vector3(0, 0, 0)
initial_velocity_max = 1.5
scale_amount_min = 0.0
scale_amount_max = 0.1
scale_amount_curve = SubResource("Curve_1hnxs")

[node name="Explode_Timer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Explode_Timer" to="." method="_on_explode_timer_timeout"]
